# pay-json

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
examples/: api-pricing.json  basic.json  free-site.json  multi-tier.json  v1.1-with-terms.json  v1.2-with-facilitators.json
spec/: LICENSE  pay-json-v1.md  pay-json-v1.schema.json
tests/: generate.test.ts  schema.test.ts  validate.test.ts
tools/: generate.ts  schema.ts  validate.ts
tools/python/: README.md  pyproject.toml
tools/python/pay_json/: __init__.py  reader.py
tools/python/tests/: test_reader.py
