[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pay-json"
version = "1.1.0"
description = "Python reader for the pay.json standard — machine-readable pricing for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pay.json community" }]
keywords = ["pay.json", "x402", "ai-agents", "micropayments", "pricing"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://payjson.org"
Repository = "https://github.com/xenarch/pay-json"
Specification = "https://github.com/xenarch/pay-json/blob/main/spec/pay-json-v1.md"

[tool.hatch.build.targets.wheel]
packages = ["pay_json"]
